Added Table to Animals.html

--- a/Animals.html
+++ b/Animals.html
@@ -30,7 +30,7 @@
   </div>
   <div class="row">
       <div class="col-md">PIG</div>
-      <div class="col-md">Antilope</div>
+      <div class="col-md">Antelope</div>
       <div class="col-md">Tiger</div>
       <div class="col-md">Horse</div>
       <div class="col-md">Urial</div>
@@ -52,6 +52,68 @@
     <img src="horse.jpg" class="img-thumbnail" alt="Horse" width="200" height="300">
     <img src="Rabbit.jpg" class="img-thumbnail" alt="Rabbit" width="200" height="300">
   </div>
+
+  <div class="container">
+    <table class="table table-borderless table-striped table-hover caption-top">
+      <caption>Table Styling</caption>
+      <thead class="table-dark">
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Letter</th>
+          <th scope="col">Animal</th>
+          <th scope="col">City</th>
+          <th scope="col">Car</th>
+        </tr>
+      </thead>
+      <tbody style="background:honeydew;">
+        <tr>
+          <th scope="row">1</th>
+          <td>P</td>
+          <td>Pig</td>
+          <td>Pennsylvania</td>
+          <td>Porsche</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>A</td>
+          <td>Antelope</td>
+          <td>Atlanta</td>
+          <td>Audi</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>T</td>
+          <td>Tiger</td>
+          <td>Tampa</td>
+          <td>Toyata</td>
+        </tr>
+        <tr>
+          <th scope="row">4</th>
+          <td>H</td>
+          <td>Horse</td>
+          <td>Houston</td>
+          <td>Honda</td>
+        </tr>
+        <tr>
+          <th scope="row">5</th>
+          <td>U</td>
+          <td>Urial</td>
+          <td>Uniondale</td>
+          <td>Urus</td>
+        </tr>
+        <tr>
+          <th scope="row">6</th>
+          <td>R</td>
+          <td>Rabbit</td>
+          <td>Rio</td>
+          <td>Range Rover</td>
+        </tr>
+      </tbody>
+    </table>
+  </div><br>
+
+
+
 </body>
 
 </html>
