--- a/Animals.html
+++ b/Animals.html
@@ -55,7 +55,7 @@
 
   <div class="container">
     <table class="table table-borderless table-striped table-hover caption-top">
-      <caption>Table Styling</caption>
+      <caption>Table Styles With Letter Animal City Car</caption>
       <thead class="table-dark">
         <tr>
           <th scope="col">#</th>
@@ -112,6 +112,22 @@
     </table>
   </div><br>
 
+  <div class="container">
+    <label>Buttons and Button Groups</label><br><br>
+    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+      <div class="btn-group me-2" role="group" aria-label="First group">
+        <button type="button" class="btn btn-success">P</button>
+        <button type="button" class="btn btn-success">A</button>
+        <button type="button" class="btn btn-success">T</button>
+      </div>
+      <div class="btn-group me-2" role="group" aria-label="Second group">
+        <button type="button" class="btn btn-warning">H</button>
+        <button type="button" class="btn btn-warning">U</button>
+      </div>
+      <div class="btn-group" role="group" aria-label="Third group">
+        <button type="button" class="btn btn-danger">R</button>
+      </div>
+    </div><br>
 
 
 </body>
