--- a/Animals.html
+++ b/Animals.html
@@ -129,6 +129,18 @@
       </div>
     </div><br>
 
+    <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+        <div class="btn-group" role="group">
+          <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+            <li><a class="dropdown-item" href="plane.html">Link to Plane page</a></li>
+            <li><a class="dropdown-item" href="train.html">Link to Train page</a></li>
+          </ul>
+        </div>
+      </div><br><br>
+
 
 </body>
 
