--- a/Animals.html
+++ b/Animals.html
@@ -161,7 +161,23 @@
           </ul>
         </div>
       </div><br><br>
-
+      
+      <form>
+        <div class="mb-3">
+          <label for="inputEmail" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" required>
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+        <div class="mb-3">
+          <label for="inputAnimal" class="form-label">Animal</label>
+          <input type="text" class="form-control" id="inputAnimal" placeholder="Enter your animal" required>
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="newsletterCheck">
+          <label class="form-check-label" for="newsletterCheck">Sign up for newsletter?</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form><br>
 
 
 </body>
