--- a/Animals.html
+++ b/Animals.html
@@ -161,7 +161,7 @@
           </ul>
         </div>
       </div><br><br>
-      
+
       <form>
         <div class="mb-3">
           <label for="inputEmail" class="form-label">Email address</label>
@@ -178,6 +178,35 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form><br>
+
+      <div class="row">
+        <div class="card" style="width: 18rem;">
+          <img src="Tiger.jpg" class="card-img-top" alt="Vulture">
+          <div class="card-body">
+            <h5 class="card-title">Tiger</h5>
+            <p class="card-text">The tiger (Panthera tigris) is the largest living cat species and a member of the genus Panthera. It is most recognisable for its dark vertical stripes on orange-brown fur with a lighter underside. It is an apex predator, primarily preying on ungulates such as deer and wild boar.</p>
+            <a href="https://en.wikipedia.org/wiki/Tiger" class="btn btn-primary">Click to find more Info</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img src="horse.jpg" class="card-img-top" alt="Akita">
+          <div class="card-body">
+            <h5 class="card-title">Horse</h5>
+            <p class="card-text">The horse or domestic horse (Equus caballus or Equus ferus caballus)[2][3] is a domesticated one-toed hoofed mammal. It belongs to the taxonomic family Equidae and is one of two extant species in the subgenus Equus.</p>
+            <a href="https://en.wikipedia.org/wiki/Horse" class="btn btn-primary">Click to find more Info</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img src="Rabbit.jpg" class="card-img-top" alt="Panther">
+          <div class="card-body">
+            <h5 class="card-title">Rabbit</h5>
+            <p class="card-text">Rabbits, or bunnies, are small mammals in the family Leporidae (along with the hare) of the order Lagomorpha (along with the pika). Oryctolagus cuniculus includes the European rabbit species and its descendants, the world's 305 breeds[1] of domestic rabbit.  </p>
+            <a href="https://en.wikipedia.org/wiki/Rabbit" class="btn btn-primary">Click to find more Info</a>
+          </div>
+        </div>
+      </div>
+    </div><br>
+  
 
 
 </body>
